--- a/atividades.html
+++ b/atividades.html
@@ -510,10 +510,94 @@
     <section class="mc-activities mc-activities--calendar">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-sm-6">
             <h2 class="main-title">CALENDÁRIO MARISTA</h2>
           </div>
+          <div class="col-12 col-sm-6">
+            <div class="form-group mc-activities__select">
+              <label for="">MÊS</label>
+              <select name="" id="">
+                <option value="">Setembro</option>
+              </select>
+            </div>
+          </div>
 
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="mc-activities--calendar__card">
+              <div class="mc-activities--calendar__card-left">
+                <div class="mc-activities--calendar__card-top">
+                  <span class="mc-activities--calendar__card-start">Início</span>
+                  <span class="mc-activities--calendar__card-date">01</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+                <div class="mc-activities--calendar__card-bottom">
+                  <span class="mc-activities--calendar__card-end">Fim</span>
+                  <span class="mc-activities--calendar__card-date">05</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+              </div>
+              <div class="mc-activities--calendar__card-right">
+                <span class="mc-activities--calendar__card-title">
+                  Nossa senhora das dores
+                </span>
+                <p class="mc-activities--calendar__card-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="mc-activities--calendar__card">
+              <div class="mc-activities--calendar__card-left">
+                <div class="mc-activities--calendar__card-top">
+                  <span class="mc-activities--calendar__card-start">Início</span>
+                  <span class="mc-activities--calendar__card-date">01</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+                <div class="mc-activities--calendar__card-bottom">
+                  <span class="mc-activities--calendar__card-end">Fim</span>
+                  <span class="mc-activities--calendar__card-date">05</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+              </div>
+              <div class="mc-activities--calendar__card-right">
+                <span class="mc-activities--calendar__card-title">
+                  Nossa senhora das dores
+                </span>
+                <p class="mc-activities--calendar__card-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="mc-activities--calendar__card">
+              <div class="mc-activities--calendar__card-left">
+                <div class="mc-activities--calendar__card-top">
+                  <span class="mc-activities--calendar__card-start">Início</span>
+                  <span class="mc-activities--calendar__card-date">01</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+                <div class="mc-activities--calendar__card-bottom">
+                  <span class="mc-activities--calendar__card-end">Fim</span>
+                  <span class="mc-activities--calendar__card-date">05</span>
+                  <span class="mc-activities--calendar__card-month">SET</span>
+                </div>
+              </div>
+              <div class="mc-activities--calendar__card-right">
+                <span class="mc-activities--calendar__card-title">
+                  Nossa senhora das dores
+                </span>
+                <p class="mc-activities--calendar__card-text">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-12 text-center">
             <a class="btn btn-square btn-square-leak" href="">VER TODOS OS EVENTOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
