--- a/eventos.html
+++ b/eventos.html
@@ -453,10 +453,89 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <!-- <li class="breadcrumb-item"><a href="#">Library</a></li> -->
-                <li class="breadcrumb-item active" aria-current="page">ATIVIDADE</li>
+                <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADE</a></li>
+                <li class="breadcrumb-item active" aria-current="page">ENCONTRO INTERNACIONAL DE JOVENS MARISTAS - GUATEMALA 2019</li>
               </ol>
             </nav>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-activities mc-activities--eventos">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-8">
+            <div class="row">
+              <div class="col-12 col-sm-6">
+                <a class="mc-activities__card" href="">
+                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+                  <div class="mc-activities__body">
+                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                  </div>
+                </a>
+              </div>
+              <div class="col-12 col-sm-6">
+                <a class="mc-activities__card" href="">
+                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+                  <div class="mc-activities__body">
+                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                  </div>
+                </a>
+              </div>
+              <div class="col-12 col-sm-6">
+                <a class="mc-activities__card" href="">
+                  <div class="mc-activities__image"><img src="https://via.placeholder.com/370x220" alt=""></div>
+                  <div class="mc-activities__body">
+                    Encontro Internacional de Jovens Maristas - Guatemala 2019
+                  </div>
+                </a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4">
+            <div class="tags">
+              <h2 class="main-title main-title--space30">EXPLORAR</h2>
+              <div class="tags__content">
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+                <a class="tags__link" href="#">Assunto 1</a>
+              </div>
+              <h2 class="main-title main-title--space30">ARQUIVO</h2>
+              <div class="tags__content">
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+                <a class="tags__link" href="#">2018</a>
+              </div>
+            </div>
+            <h2 class="main-title main-title--space30">ÚLTIMAS NOTÍCIAS</h2>
+            <div class="mc-latestnews__card mc-latestnews__card--v2">
+              <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+              <div>
+                <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                <div class="mc-latestnews__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+            <div class="mc-latestnews__card mc-latestnews__card--v2">
+              <div class="mc-latestnews__image"><img src="https://via.placeholder.com/150x120" alt=""></div>
+              <div>
+                <div class="mc-latestnews__header"><span class="date">27/11/2018</span> <span class="label">ITÁLIA</span></div>
+                <div class="mc-latestnews__body">
+                  <p>Vida e missão na Europa - Encontro da Conferência Européia Marista (CEM)</p>
+                </div>
+              </div>
+            </div>
+            <a href="" class="btn btn-more-news">VEJA TODAS AS NOTÍCIAS <i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -501,7 +580,7 @@
             </a>
           </div>
           <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="eventos.html">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
+            <a class="btn btn-square btn-square-leak" href="">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
