--- a/eventos-single.html
+++ b/eventos-single.html
@@ -492,6 +492,32 @@
                   <div class="mc-single__share">
                     <span>COMPARTILHE:</span>
                   </div>
+                  <div class="mc-single__nav">
+                    <div class="mc-single__nav-l">
+                      <div class="mc-single__header">
+                        <span class="date">27/11/2018</span>
+                        <span class="label">ITÁLIA</span>
+                      </div>
+                      <div class="mc-single__body">
+                        <p>Lorem ipsum dolor consect</p>
+                      </div>
+                      <a href="" class="mc-single__link">
+                        <i class="fa fa-long-arrow-left"></i>VOLTAR
+                      </a>
+                    </div>
+                    <div class="mc-single__nav-r">
+                      <div class="mc-single__header">
+                        <span class="date">27/11/2018</span>
+                        <span class="label">ITÁLIA</span>
+                      </div>
+                      <div class="mc-single__body">
+                        <p>Lorem ipsum dolor consect</p>
+                      </div>
+                      <a href="" class="mc-single__link">
+                        AVANÇAR<i class="fa fa-long-arrow-right"></i>
+                      </a>
+                    </div>
+                  </div>
                 </article>
               </div>
             </div>
